src/styles.css
html, body, h1, h2, h3, h4, h5, h6, p {
    font-family: 'Poppins', sans-serif;
}

section {
    background-color: white;
}

footer {
    background-color: black;
    color: white;
    text-align: center;
}

h1 {
    font-size: 5rem;
    font-weight: 700;
}

h2 {
    font-size: 3rem;
    font-weight: 700;
}

p {
    margin: 0;
    font-size: 1.5rem;
    font-weight: 300;
}

.subtext {
    font-size: 1rem;
    font-weight: 300;
}

#home {
    background-color: #004d4d;
    color: white;
    min-height: 100vh;
}

.hero-area {
    padding-top: 30rem;
}

.w3-row {
    padding-left: 4rem;
    padding-right: 4rem;
}

.w3-top {
    color: white;
    background-color: #004d4d;
    font-size: 1.5rem;
}

#socials {
    text-align: right;
}

#about-me {
    min-height: 100vh;
    padding-top: 24rem;
}

.headshot {
    width: 14rem;
    border-radius: 150px;
    margin: 2rem; 
}

.company-logo {
    width: 8rem;
}

#experience {
    padding-top: 3rem;
}

#single-experience {
    padding-left: 0;
    padding-bottom: 1.4rem;
    padding-right:0;
}

#ex-desc {
    font-size: 1rem;
}

@media only screen and (max-width: 600px){
    .hero-area {
        padding-top: 20rem;
    }

    #socials {
        text-align: center;
    }

    h1 {
        font-size: 4rem;
        font-weight: 700;
    }

    #hero-text {
        padding-bottom: 2rem;
    }

    .w3-row {
        padding-left: 1rem;
        padding-right: 1rem;
        text-align: center;
    }

    #about-me {
        padding-top: 2rem;
    }
}

